[gd_scene load_steps=46 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Wander.gd" type="Script" id=2]
[ext_resource path="res://Attack.gd" type="Script" id=4]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0006.png" type="Texture" id=5]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0007.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0012.png" type="Texture" id=7]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0010.png" type="Texture" id=8]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0011.png" type="Texture" id=9]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0002.png" type="Texture" id=10]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0003.png" type="Texture" id=11]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0001.png" type="Texture" id=12]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0004.png" type="Texture" id=13]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0009.png" type="Texture" id=14]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0008.png" type="Texture" id=15]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0013.png" type="Texture" id=16]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0014.png" type="Texture" id=17]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0015.png" type="Texture" id=18]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0016.png" type="Texture" id=19]
[ext_resource path="res://Assets/Animations/Enemy/Walking/Spider_Walking0005.png" type="Texture" id=20]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0017.png" type="Texture" id=22]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0016.png" type="Texture" id=23]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0019.png" type="Texture" id=24]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0018.png" type="Texture" id=25]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0020.png" type="Texture" id=26]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0021.png" type="Texture" id=27]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0024.png" type="Texture" id=28]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0022.png" type="Texture" id=29]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0023.png" type="Texture" id=30]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0026.png" type="Texture" id=31]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0025.png" type="Texture" id=32]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0027.png" type="Texture" id=33]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0029.png" type="Texture" id=34]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0028.png" type="Texture" id=35]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0011.png" type="Texture" id=42]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0012.png" type="Texture" id=43]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0013.png" type="Texture" id=44]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0014.png" type="Texture" id=45]
[ext_resource path="res://Assets/Animations/Enemy/Attack/Spider_Attack0015.png" type="Texture" id=46]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "walking",
"speed": 24.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "attack",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 256.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.768627, 0.580392, 0.580392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_detail = 3

[sub_resource type="Theme" id=6]
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 4 )
ProgressBar/styles/fg = SubResource( 5 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="States" type="Node" parent="."]

[node name="Wander" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0.4, 0 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 7 )
animation = "walking"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
margin_top = 58.0
margin_right = 100.0
margin_bottom = 73.0
rect_min_size = Vector2( 100, 15 )
theme = SubResource( 6 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="States/Attack" method="_on_CooldownTimer_timeout"]
